# 13_democratiser_sobriete

./: .codecarbon.config  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  Makefile  Procfile  RAG_SYSTEM_OPERATIONS_GUIDE.md  RAPPORT_DEMANDE_CALCUL_RAG.md  README.md  TECHNICAL_WHITEPAPER_RAG_PIPELINE.md  clevercloud.json  env_cluster.txt  failed_files.txt  final_validation.py  installation.md  predict.py  pyproject.toml  requirements.txt  tox.ini
policy_analysis/: .env.example  POLICIES_EXTRACTION_PROMPT.txt  README.md  all_at_once_extraction attempt.ipynb  chunk_conclusions.ipynb  classify_suffciency.ipynb  cluster_by_tag_and_llm.ipynb  compute_embeddings.py  gather_all_results.ipynb  impact_direction.ipynb  isolate_and_chunk_conclusions.ipynb  jz_geo_extraction.sh  jz_policy_extraction.sh  policy_extraction.ipynb  policy_impact_rag.py  policy_impact_structured_client.py  pyproject.toml  qdrant_ingestion.ipynb  vllm_geo_extraction.py
policy_analysis/agentic_data_policies_extraction/: README_MULTI_AGENT.md
policy_analysis/agentic_data_policies_extraction/policies_transformation_to_matrices/: merge_policies_kmean_2.py
policy_analysis/clustering/: cluster_qdrant_ingestion.ipynb  cluster_qdrant_ingestion_old.ipynb  cluster_representatives_2026-03-10.csv  embed_clusters.ipynb  leiden_clustering.ipynb  postprocess_clusters.ipynb
policy_analysis/clustering/old/: clusterings.py  create_embedings.py  reduction.py  report.py
policy_analysis/data/: conclusions&pollitiques_gold.jsonl
policy_analysis/data/archive_data/: complete_flattened_policies.csv  policy_clusters.csv
policy_analysis/dspy_policies_and_taxonomy_extraction/: README.md  pipeline_policy_and_taxonomy_extraction.py
policy_analysis/dspy_policies_and_taxonomy_extraction/initial_chunk_cleaning/: clean_chunks.py
policy_analysis/dspy_policies_and_taxonomy_extraction/model_training_data/: gold_impact_taxonomy_concat_2026-03-11.jsonl  gold_impact_taxonomy_concat_with_embeddings_2026-03-11.parquet  gold_policy.jsonl  gold_taxonomy.jsonl  gold_taxonomy.xlsx  gold_taxonomy_dataset_2026-03-11.jsonl  gold_taxonomy_dataset_with_embeddings_2026-03-11.parquet  input.xlsx  synthetic_policy.jsonl
policy_analysis/dspy_policies_and_taxonomy_extraction/policy_extraction/: policy_dspy_model_creation.py
policy_analysis/dspy_policies_and_taxonomy_extraction/synthetic_data_generation/: taxonomy_data_generator.py
policy_analysis/dspy_policies_and_taxonomy_extraction/taxonomy_definition/: geographical_taxonomy.py  impact_taxonomy.py
policy_analysis/dspy_policies_and_taxonomy_extraction/taxonomy_extraction/: classify_data_with_trained_model.py  geography_only_dspy_model_creation.py  impact_classification_model_training.py  label_data_llm.ipynb  taxonomy_dspy_model_creation.py  utils.py
policy_analysis/dspy_policies_extraction/: README.md  cleaned_results_llm_semantic.parquet  cleaned_results_preview.jsonl  main.py  output.jsonl  pyproject.toml  synthetic_data-all.jsonl
policy_analysis/dspy_policies_extraction/data/: conclusions&pollitiques_synthetiques.jsonl
policy_analysis/dspy_policies_extraction/saved_dspy_model/: Mistral-small_3.2_24b-instruct_86_93.json.json  openai_gpt-4o-mini_81_87.json
policy_analysis/dspy_policies_extraction/synthetic_data_generation/: data_generator.py
policy_analysis/impacts_analysis/: IMPACT_DIRECTION_EXTRACTION_PROMPT.txt  clusters_with_sustainability_classification_temp_2026-03-13.csv  gold_correlation_dataset_2026-03-11.json  gold_impact_direction.parquet  impact_direction.ipynb  jz_impactdir.sh  policy_impact_rag.py  postprocess_impacts.ipynb
policy_analysis/notebooks/: BERTopic.ipynb  extraction.ipynb
policy_analysis/policies_clustering/: clusterings.py  embeddings.py  excel_ready_csv.py  readpkl.py  save_to_hf.py
policy_analysis/policy_extraction/: vllm_impact_direction_extraction.py  vllm_policy_extraction.py
policy_analysis/sample10k_results/: impact_evaluation_results.pkl  sample10k_cleaned_policies_tagged_v4_2026-01-30.parquet  sample_10k_policy_clusters_llm_2026-02-12.csv  sample_10k_policy_clusters_llm_2026-02-12.parquet
policy_analysis/tests/: test_import.py
rag_system/backend/: .env.example  README.md  app.py  config.py  database.py  dependencies.py  generation.py  models.py  prompts.py  pyproject.toml  rag.py  requirements.txt  reranking.py  retrieval.py
rag_system/backend/app/: config.py  (+16 more)
rag_system/pipeline_scripts/: .env.example  archive_scraped_pdfs.sh  cli.py  fast_ingestion_pipeline.py  fast_ingestion_pipeline_good_version.py  historized_ingestion_pipeline.py  historized_ingestion_pipeline_new_version.py  persist_taxonomy.py  pyproject.toml  requirements.txt  run_daemon.sh  run_metadata_extraction.sh  run_parallel.sh  test_ingestion_pipeline.py
stream3_visualization/: .gitignore  DEPLOYMENT.md  Dockerfile  Europe_geojson  Procfile  README.md  WSL_INTEGRATION.md  check_us_emissions.py  clevercloud.json  compute_ewbi_final.ipynb  deploy-clevercloud.sh  deploy-scaleway.sh  detailed_data_analysis.py  docker-compose.yml  plot_ewbi.ipynb  pyproject.toml  requirements.txt  scaleway-deployment.yml  ssh-keygen -t ed25519 -C "louis.tronel@gmail.com"  ssh-keygen -t ed25519 -C "louis.tronel@gmail.com".pub  start_dashboards.sh  test-uvicorn.py
stream3_visualization/Budget/: README.md
stream3_visualization/Decomposition/: .gitignore  Procfile  Procfile_world  README.md
stream3_visualization/Well-being/: .gitignore  COMPUTATION_PIPELINE.md  EWBI_App_Status_Report.md  EWBI_Computation_Logic.md  EWBI_Dashboard_Technical_Documentation.md  Procfile  README.md  README_filtering.md  check_raw_data.py  data_analysis.py  patch_level4_fix.py  plot_ewbi.ipynb  quick_fix_level4.py  temp_output.txt  test_nan_handling.py
stream3_visualization/code/: detailed_data_analysis.py
stream3_visualization/data/: 2025-02-03_Data visualiation EWBI.xlsx  2025-02-04_Data visualisation SGR.xlsx  recomputed_indices.xlsx
stream3_visualization/decomposition/: README.md
stream3_visualization/ngrok_config/: ngrok.yml
stream3_visualization/results/: secondary_indicators.csv
(+605 files in other folders)
