[project]
name = "fast_ingestion"
version = "0.1.0"
description = "Define the fast_ingestion utilitaries functions and objects for pipeline scripts"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6",
    "SQLAlchemy>=2.0.29,<3",
    "sqlmodel>=0.0.16,<0.1",
    "psycopg2-binary>=2.8.1,<2.9.10"
    ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["fast_ingestion"]