[project]
name = "fast_ingestion"
version = "0.1.0"
description = "Define the fast_ingestion utilitaries functions and objects for pipeline scripts"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.29,<3",
    "sqlmodel>=0.0.16,<0.1",
    "psycopg2-binary>=2.8.1,<2.9.10",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "kaleido>=1.2.0",
    "together>=1.5.30",
    "pymupdf4llm>=0.1.8",
    "plotly>=6.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["fast_ingestion"]
